namespaces/live.cloud-platform.service.justice.gov.uk/crime-court-message-processor-service-dev/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "crime-court-message-processor-service-dev"
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "development"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "LAA"
    cloud-platform.justice.gov.uk/slack-channel: "laa-crimeapps-teamchat"
    cloud-platform.justice.gov.uk/application: "Crime Court Message Processor"
    cloud-platform.justice.gov.uk/owner: "LAA Crime Apps: laacrimeapps@justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/laa-crime-court-message-processor"
    cloud-platform.justice.gov.uk/team-name: "laa-crime-apps-team"
    cloud-platform.justice.gov.uk/review-after: ""
